2006-05-05  Sebastien Pouliot  <sebastien@ximian.com>

	* ExecutionContext.cs: Don't capture the compressed stack unless the 
	security manager is active (this wasn't ready to be called in 
	production code).

2004-04-29  Atsushi Enomoto  <atsushi@ximian.com>

	* Timer.cs : avoid NullReferenceException when it is already disposed.
	  Patch by pawel.sakowski@mind-breeze.com. Fixed bug #78208.

2004-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SynchronizationContext.cs : use ThreadPool in Post(), as suggested
	  by cl (bug #78139).

2004-04-04  Atsushi Enomoto  <atsushi@ximian.com>

	* Thread.cs : base class is CriticalFinalizerObject.
	* ThreadStartException.cs : no public constructors.

Wed Mar 29 18:29:55 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* Thread.cs: update for the runtime changes to culture caching.

Wed Mar 15 16:35:49 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Thread.cs: updates for LocalDataStoreSlot: we use an array as
	storage for the slots now so that LocalDataStoreSlot objects an be
	garbage collected if the user doesn't keep a reference to them.

2006-02-09  Miguel de Icaza  <miguel@novell.com>

	* Monitor.cs: Patch from Thong Nguyen, Wait (.., Timeout) method
	should allow a -1 (Timeout.Infinite) to mean indefinite wait (the
	code already supported this.

	Removed also a LAMESPEC for missing argument checking in Wait with
	the int argument.
	
	Fixed the use of exceptions.

2005-12-23  Dick Porter  <dick@ximian.com>

	* EventWaitHandle.cs: 
	* Mutex.cs: Implement OpenExisting

	* NativeEventCalls.cs: Add OpenEvent icall for OpenExisting in
	2.0.  Add a "created" boolean out parameter to CreateEvent icall.

	* ManualResetEvent.cs: 
	* AutoResetEvent.cs: Update CreateEvent icall signature (now has
	"created" boolean out parameter.)

2005-12-17  Dick Porter  <dick@ximian.com>

	* ThreadStartException.cs: 
	* EventWaitHandle.cs: 
	* EventResetMode.cs: 
	* AbandonedMutexException.cs: New for 2.0 profile

	* ThreadState.cs: 
	* Interlocked.cs: 